overflow on x axis fixed

--- a/client/src/Pages/Homepage.js/Homepage.css
+++ b/client/src/Pages/Homepage.js/Homepage.css
@@ -1,3 +1,6 @@
+.chesshome-container{
+  overflow-x: hidden;
+}
 header {
   background: #00B87C;
   color: white;
